@@ -28,7 +28,7 @@
 
 #define MAX_RQ_SIZE 50	/* maximum size of request queue */
 
-#define VERSION "0.63"
+#define VERSION "0.65"
 
 #include <errno.h>
 #include <fcntl.h>
