@@ -1,3 +1,12 @@
+Sun 26 Aug 2007 03:38:29 PM EEST
+parprouted 0.65:
+Fix a problem with incorrect handling of a case when there are two entries 
+for the same IP, incomplete and correct one. This can happen when machine 
+running parprouted is rebooted. 
+Credit for the fix goes to Dennis Borgmann <herakles@gmx.net> and 
+Matthias Huning <mhuning@gmx.de>.
+
+------------------------------------------------------------------------
 Sun 14 Jan 2007 06:22:43 PM EET
 parprouted 0.64:
 Don't send ARP requests for incomplete records. Thanks to 
@@ -17,8 +26,8 @@ Windows XP.
 
 Sun 11 Jan 2004 01:38:43 PM EET
 parprouted 0.6:
-Now ARP queries from the local host are resolved as well. Various small updates
-to code and documentation.
+Now ARP queries from the local host are resolved as well. Various small 
+updates to code and documentation.
 
 ------------------------------------------------------------------------
 Tue 06 Jan 2004 09:22:09 PM EET
